--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,15 @@
 .accent-color {
     color: var(--accent);
 }
+
+.bottom-btn {
+    position: absolute;
+    bottom: calc(12px + env(safe-area-inset-bottom));
+    left: 12px;
+    right: 12px;
+    width: calc(100% - 24px);
+}
+
+.Card__in {
+    overflow: hidden!important;
+}
