--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,18 @@
 .Card__in {
     overflow: hidden!important;
 }
+
+.amount-info-row {
+    width: 100%;
+}
+
+.amount-info-row .Subhead {
+    color: var(--text_primary);
+    font-weight: 500;
+    padding-bottom: 4px;
+}
+
+.amount-block {
+    display: flex;
+    justify-content: space-between;
+}
